--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
 
     <com.example.lvruheng.autoflowlayout.AutoFlowLayout
         android:id="@+id/afl_cotent"
-        app:multiChecked="true"
+        app:columnNumbers="3"
+        app:rowNumbers="3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </RelativeLayout>
