分割线设置完成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:id="@+id/afl_cotent"
         app:columnNumbers="3"
         app:rowNumbers="3"
+        app:cutLine="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </RelativeLayout>
