--- a/app/src/main/res/layout/special_item.xml
+++ b/app/src/main/res/layout/special_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:paddingBottom="12dp"
-             android:paddingTop="12dp"
-             android:paddingLeft="8dp"
+             android:layout_marginTop="12dp"
+             android:layout_marginBottom="12dp"
+             android:layout_marginLeft="8dp"
              android:gravity="center"
-             android:paddingRight="8dp"
+             android:layout_marginRight="8dp"
              android:orientation="vertical">
     <TextView
+        android:text="你好"
         android:id="@+id/tv_attr_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +20,6 @@
         android:textSize="16sp"
         android:background="@drawable/bg_sub_tag"
         android:textColor="@color/btn_common_text">
-
     </TextView>
     <ImageView
         android:layout_alignParentTop="true"
@@ -29,4 +29,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-</FrameLayout>
+</RelativeLayout>
